data/derived/comb/progs/unify/prog8383.ml.out
Characters 77-91:
  | h::t -> 10*h*i + mulByDigit i t;;
                     ^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
